# tmai-api-Endgame

./: .env.example  .gitignore  LICENSE  README.md  config.py  example.env  package.json  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: IMPLEMENTATION.md  SPECIFICATION.md  architecture.mmd  proposal.md  pull_request.md  todo.md
examples/: example_usage.ipynb  trading_strategies.ipynb  universe.pkl
js/: LICENSE  README.md
js/examples/: express-server.js
js/src/: base.js  client.js
js/src/endpoints/: ai_agent.js  ai_reports.js  hourly_ohlcv.js  indices_performance.js  scenario_analysis.js  sector_indices_performance.js  tokens.js  top_market_cap_tokens.js
python/: .gitignore  LICENSE  README.md  setup.cfg
python/examples/: trading_strategies.ipynb
python/tmai_api/endpoints/: ai_reports.py
src/: base.js  client.js  index.js  masa_mcp_server.py  masa_util.py  setup_env.py  token_metrics_mcp_server.py  trading_mcp_server.py
src/endpoints/: correlation.js  crypto_investors.js  daily_ohlcv.js  index_holdings.js  index_transaction.js  investor_grades.js  investor_indices.js  market_metrics.js  price.js  quantmetrics.js  resistance_support.js  sector_index_transaction.js  sector_indices_holdings.js  sentiment.js  trader_grades.js  trader_indices.js  trading_signals.js
test/: test.js
tests/: test_main.py
tmai_api/: base.py
tmai_api/endpoints/: hourly_ohlcv.py  investor_grades.py  tokens.py  trader_grades.py
