[metadata]
name = tmai-api
version = 0.4.0
author = TMAI
author_email = talhacagri@tokenmetrics.com
description = Python SDK for Token Metrics AI API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/token-metrics/tmai-api
project_urls =
    Bug Tracker = https://github.com/token-metrics/tmai-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
    pandas
    matplotlib
    vectorbt
    tqdm
